# stepeval

./: .ghci  LICENSE  LambdaCaseLet.hs  Main.hs  Makefile  README  README.md  Setup.hs  stepeval.cabal
src/: .ghci  LambdaCaseLet.hs  Main.hs  Parenthise.hs  Stepeval.hs
src/Language/Haskell/: Stepeval.hs
testsuite/: Test.hs  alpha.step  alphalet.step  ap.step  applyn.step  arith.step  aspat.step  caselet.step  casewhere.step  fixity.step  foldr.eval  guard.step  infix.step  lambda.step  letlambda.step  map.eval  matchlet.step  nestedcase.step  nestedeval.step  nestedlet.step  num.step  recursivelet.step  shadowcase.step  shadowlambda.step  simplelet.step  sum.eval  sum.step  take.step  tuple.step  where.step
