Cabal-Version: >= 1.6

Name:     stepeval
Version:  0.1
Category: Language
Synopsis: A tool for displaying the evaluation of a Haskell expression

Description:
    stepeval is a tool that can operate as a command-line utility
    or CGI script. In either case, it is given a Haskell
    expression in string form, applies a single evaluation
    operation (e.g. pattern matching, lambda application), and
    prints the result, while also feeding it back into its
    evaluation mechanism until the expression cannot be evaluated
    any further, or in the case of the CGI script a time limit
    has expired.

Author:       Ben Millwood <haskell@benmachine.co.uk>
Maintainer:   Ben Millwood <haskell@benmachine.co.uk>
Copyright:    2010 Ben Millwood
License:      BSD3
License-file: LICENSE

Build-type:         Simple
Tested-with:        GHC == 6.12.3, GHC == 7.0.1
Extra-source-files: testsuite/*.step testsuite/*.eval

Flag test
  Description: Build the testing application
  Default:     False

Executable stepeval
  Build-Depends: base >= 4 && < 4.4,
                 containers >= 0.1 && < 0.5,
                 haskell-src-exts >= 1.6 && < 1.10,
                 syb >= 0.1 && < 0.3

  GHC-Options:    -W
  Hs-Source-Dirs: src
  Main-is:        Main.hs
  Other-Modules:  Stepeval, Parenthise

Executable test
  Main-is: Test.hs

  if flag(test)
    Build-Depends: base >= 4 && < 4.4,
                   containers >= 0.1 && < 0.5,
                   directory >= 1.0 && < 1.2,
                   filepath >= 1.1 && < 1.3,
                   haskell-src-exts >= 1.6 && < 1.10,
                   syb >= 0.1 && < 0.3

    GHC-Options:    -W
    Hs-Source-Dirs: src testsuite
    Other-Modules:  Stepeval, Parenthise
  else
    Buildable: False

Source-Repository head
  type:     git
  location: git://github.com/benmachine/stepeval.git

