Cabal-Version: >= 1.6

Name:     stepeval
Version:  0.2
Category: Language
Synopsis: Evaluating a Haskell expression step-by-step

Description:
    stepeval operates on haskell-src-exts ASTs, performing a single
    evaluation step (e.g. pattern matching, function application) at a
    time.
    .
    stepeval comes bundled with an executable that can operate as a
    command-line utility or a CGI script. In either case it takes an
    expression input as a string and displays each step of its
    evaluation, until it reaches weak head normal form or, in the case of
    the CGI script, a time limit expires.

Author:       Ben Millwood <haskell@benmachine.co.uk>
Maintainer:   Ben Millwood <haskell@benmachine.co.uk>
Copyright:    2010-2011 Ben Millwood
License:      BSD3
License-file: LICENSE

Build-type:         Simple
Tested-with:        GHC == 6.12.3, GHC == 7.0.1
Extra-source-files: testsuite/*.step testsuite/*.eval

Flag program
  Description: Build the CLI/CGI tool
  Default:     True

Flag test
  Description: Build the testing application
  Default:     False

Library
  Exposed-modules: Language.Haskell.Stepeval
  Other-modules:   Parenthise

  Build-Depends:
      base >= 4 && < 4.6,
      containers >= 0.1 && < 0.5,
      haskell-src-exts >= 1.11 && < 1.14,
      syb >= 0.1 && < 0.4

  GHC-Options:    -W
  Hs-Source-Dirs: src

Executable stepeval
  Main-is: Main.hs

  if flag(program)
    Hs-Source-Dirs: src
    Other-Modules:  Language.Haskell.Stepeval, Parenthise

    Build-Depends:
        base >= 4 && < 4.6,
        containers >= 0.1 && < 0.5,
        haskell-src-exts >= 1.11 && < 1.14,
        syb >= 0.1 && < 0.4

    GHC-Options:    -W
  else
    Buildable: False

Executable test
  Main-is: Test.hs

  if flag(test)
    Hs-Source-Dirs: src testsuite
    Other-Modules:  Language.Haskell.Stepeval, Parenthise

    Build-Depends:
        base >= 4 && < 4.6,
        containers >= 0.1 && < 0.5,
        directory >= 1.0 && < 1.2,
        filepath >= 1.1 && < 1.4,
        haskell-src-exts >= 1.11 && < 1.14,
        syb >= 0.1 && < 0.4,
        transformers >= 0.2 && < 0.4

    GHC-Options:    -W
  else
    Buildable: False

Source-Repository head
  type:     git
  location: git://github.com/benmachine/stepeval.git

